log
Mon 06 May 2024 08:51:51 PM UTC: 
 treemap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:65:9: error: expected expression before ‘)’ token
   65 |     if ()
      |         ^
Compilation failed
a3acd16
